# image-processing

./: .gitignore
scripts/: coverage.bash
stitcher/: CMakeLists.txt  main.cpp
stitcher/include/airmap/: camera.h  camera_models.h  distortion.h  gimbal.h  images.h  logger.h  opencv_high_stitcher.h  opencv_stitcher.h  panorama.h  stitcher.h  stitcher_configuration.h
stitcher/include/airmap/opencv/: matchers.h
stitcher/src/: distortion.cpp  images.cpp  opencv_high_stitcher.cpp  panorama.cpp  stitcher.cpp
stitcher/src/opencv/: matchers.cpp
stitcher/test/bats/: CMakeLists.txt
stitcher/test/gtest/: CMakeLists.txt  camera.cpp  camera_models.cpp  distortion.cpp  gimbal.cpp  images.cpp
stitcher/test/gtest/opencv_assert/: mat_compare.h
